syntax = "proto3";

option csharp_namespace = "GrpcFileServer";

package infra.file.v1;

service FileTransfer {
  rpc Upload (stream UploadRequest) returns (stream UploadResponse);
  rpc Download (DownloadRequest) returns (stream DownloadResponse);
}

message UploadRequest {
  string filename = 1;
  int32 block = 2;
  bytes content = 3;
  string mark = 4;
}

message UploadResponse {
  string filename = 1;
  string mark = 2;
}

message DownloadRequest {
  repeated string filenames = 1;
  string mark = 2;
}

message DownloadResponse {
  string filename = 1;
  int32 block = 2;
  bytes content = 3;
  string mark = 4;
}
